# uacrypt

./: .gitignore  CLAUDE.md  Cargo.toml  DECISIONS.md  LICENSE-MIT  ORACLES.md  PERFORMANCE.md  README.md  SECURITY.md  TASKS.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: oracle-harness.yml  rust.yml
crates/dstu-core/: Cargo.toml
crates/dstu-core/benches/: kalyna.rs  kupyna.rs  strumok.rs
crates/dstu-core/examples/: kalyna_diff_cases.rs  kupyna_diff_cases.rs  strumok_diff_cases.rs
crates/dstu-core/fuzz/: Cargo.toml
crates/dstu-core/fuzz/fuzz_targets/: kalyna.rs  kalyna_ccm.rs  kupyna.rs  strumok.rs
crates/dstu-core/src/: crypto_sign.rs  lib.rs
crates/dstu-core/src/hazmat/: kalyna.rs  kalyna_ccm.rs  kupyna.rs  kupyna_kdf.rs  kupyna_kmac.rs  mod.rs  strumok.rs  tables.rs
crates/dstu-core/src/hazmat/dstu4145/: curve163.rs  gf2m163.rs  mod.rs  scalar.rs  signature.rs
crates/dstu-core/tests/: crypto_sign.rs  dstu4145_curve.rs  dstu4145_gf2m.rs  dstu4145_signature.proptest-regressions  dstu4145_signature.rs  kalyna.rs  kalyna_ccm.rs  kupyna.proptest-regressions  kupyna.rs  kupyna_kdf.rs  kupyna_kmac.rs  strumok.rs
crates/dstu-core/tests/vectors/dstu4145/: gf2m163.json  gf2m163_arith.json
crates/dstu-core/tests/vectors/kalyna/: 128-128.json  128-256.json  256-256.json  256-512.json  512-512.json
crates/dstu-core/tests/vectors/kalyna-ccm/: 128-128.json  128-256.json  256-256.json  256-512.json  512-512.json
crates/dstu-core/tests/vectors/kupyna/: kupyna-256.json  kupyna-512.json
crates/dstu-core/tests/vectors/kupyna-kmac/: kmac-256.json  kmac-384.json  kmac-512.json
crates/dstu-core/tests/vectors/strumok/: keystream-256.json  keystream-512.json
crates/dstu-core/tests/vectors/strumok/gray/: keystream-256.json  keystream-512.json
crates/dstutool/: Cargo.toml
crates/dstutool/src/: lib.rs  main.rs
crates/uacrypt/: Cargo.toml
crates/uacrypt/src/: lib.rs  main.rs
docs/: cross-language-style-guide.md  dstu-crypto-project.md  dstu9041-8845-info-request-draft.md  release-readiness.md  resource-profiles.md  rust-crypto-claude-advice.md  rust_ai_ruleset.md
docs/pseudocode/: crypto-sign.md  dstu4145.md  kalyna-ccm.md  kalyna.md  kupyna-kdf.md  kupyna-kmac.md  kupyna.md  strumok.md
oracles/: README.md
tests/oracle-harness/dotnet/: Program.cs  oracle-harness.csproj
tests/oracle-harness/java/: pom.xml
tests/oracle-harness/java/src/main/java/: Dstu4145Debug.java  Dstu4145VectorGen.java  OracleHarness.java
tests/oracle-harness/kalyna-differential/: diff_against_reference.c
tests/oracle-harness/kupyna-differential/: diff_against_reference.c
tests/oracle-harness/strumok-cross-check/: cross_check_against_uapki.c
tests/oracle-harness/strumok-differential/: diff_against_outspace.c
tests/oracle-harness/strumok-gray-generator/: generate_gray_vectors.c
xtask/: Cargo.toml
xtask/src/: main.rs
