[package]
name = "dstu-core"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust implementations of Ukrainian DSTU cryptographic standards (Kalyna, Kupyna, Strumok)"

[lib]
name = "dstu_core"

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
zeroize = { version = "1.9.0", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"

[[bench]]
name = "kalyna"
harness = false

[[bench]]
name = "kupyna"
harness = false

[[bench]]
name = "strumok"
harness = false
