[package]
name = "dstu-core"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust implementations of Ukrainian DSTU cryptographic standards (Kalyna, Kupyna, Strumok)"

[lib]
name = "dstu_core"

[features]
default = ["std"]
std = []
alloc = []
# Resource profile for constrained targets (DECISIONS.md D-35/D-38): swaps the fused S-box+MDS
# lookup tables (~86 KB of `const` data) for the pre-D-26/D-27 gf_mul-based path (~6 KB) at the
# cost of throughput. Independent of std/alloc/no_std - can combine with any of them.
small-tables = []

[dependencies]
zeroize = { version = "1.9.0", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"

[[bench]]
name = "kalyna"
harness = false

[[bench]]
name = "kupyna"
harness = false

[[bench]]
name = "strumok"
harness = false
