[package]
name = "dstu-core-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dstu-core]
path = ".."

[[bin]]
name = "kupyna"
path = "fuzz_targets/kupyna.rs"
test = false
doc = false
bench = false

[workspace]
